src/test/ui/impl-header-lifetime-elision/path-elided.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/path-elided.rs:7:18
   |
LL | impl MyTrait for Foo {
   |                  ^^^- help: indicate the anonymous lifetime: `<'_>`

error: aborting due to previous error

